--- a/albionboxes/prod_volcano_goober.yaml
+++ b/albionboxes/prod_volcano_goober.yaml
@@ -9,8 +9,9 @@ substitutions:
   volcano_mac_address: !secret volcano_mac_address
   autoconnect: "true"
   volcano_switch_restore_mode: RESTORE_DEFAULT_OFF
-  temperature_sensor_update_interval: "60s"
+  temperature_sensor_update_interval: "30s"
   main_service_uuid: "10110000-5354-4f52-5a26-4249434b454c"
+  primary_info_service_uuid: "10100000-5354-4f52-5a26-4249434b454c"
   heat_turn_on_char_uuid: "1011000f-5354-4f52-5a26-4249434b454c"
   heat_turn_off_char_uuid: "10110010-5354-4f52-5a26-4249434b454c"
   fan_turn_on_char_uuid: "10110013-5354-4f52-5a26-4249434b454c"
@@ -69,20 +70,56 @@ sensor:
     unit_of_measurement: "°C"
     device_class: "temperature"
     state_class: "measurement"
-    # https://stackoverflow.com/questions/105252/how-do-i-convert-between-big-endian-and-little-endian-values-in-c
     lambda: |-
-      float little;
-      little = (x[0]<<0) | (x[1]<<8) | (x[2]<<16) | ((unsigned)x[3]<<24);
-      ESP_LOGD("volcano_temp", "Got converted little: %f", little);
-      float final_little = little / 10.0;
-      ESP_LOGD("volcano_temp", "Got final final_little: %f", final_little);
-      return final_little;
+      float converted_read_value = encode_uint16(x[1], x[0]);
+      ESP_LOGD("volcano_temp", "Got converted_read_value: %f", converted_read_value);
+      float final_read_temp = converted_read_value / 10.0;
+      float final_return_temp;
+      if (final_read_temp < 6535.6) {
+        final_return_temp = final_read_temp;
+      } else {
+        final_return_temp = 40;
+      }
+      ESP_LOGD("volcano_temp", "Got final_read_temp: %f", final_read_temp);
+      ESP_LOGD("volcano_temp", "Got final_return_temp: %f", final_return_temp);
+      return final_return_temp;
+
+  - platform: ble_client
+    type: characteristic
+    ble_client_id: volcano
+    update_interval: ${temperature_sensor_update_interval}
+    name: "${friendly_name} Primary Info Sensor"
+    service_uuid: ${primary_info_service_uuid}
+    characteristic_uuid: ${current_primary_info_char_uuid}
+    lambda: |-
+      uint16_t reverse_extra_encoded = encode_uint16(x[1], x[0]);
+      ESP_LOGD("volcano_primary_info", "Got reverse_extra_encoded: %u", reverse_extra_encoded);
+      bool final_heat_status = false;
+      bool final_fan_status = false;
+      // first heating
+      if ((reverse_extra_encoded & 0x0020) == 0) {
+        ESP_LOGD("volcano_primary_info", "heating is off");
+        final_heat_status = false;
+      } else {
+        ESP_LOGD("volcano_primary_info", "heating is on");
+        final_heat_status = true;
+      }
+      // then fan
+      if ((reverse_extra_encoded & 0x2000) == 0) {
+        ESP_LOGD("volcano_primary_info", "fan is off");
+        final_fan_status = false;
+      } else {
+        ESP_LOGD("volcano_primary_info", "fan is on");
+        final_fan_status = true;
+      }
+      id(heat_status).publish_state(final_heat_status);
+      id(fan_status).publish_state(final_fan_status);
+      return 1.0;
 
   - platform: ble_client
     type: rssi
     ble_client_id: volcano
     name: "${friendly_name} BLE RSSI"
-
 
 switch:
   - platform: template
@@ -124,3 +161,13 @@ switch:
           characteristic_uuid: ${fan_turn_off_char_uuid}
           # List of bytes to write.
           value: [ 0x00 ]
+
+binary_sensor:
+  # https://esphome.io/components/binary_sensor/template.html
+  - platform: template
+    name: "${friendly_name} Heat Status"
+    id: heat_status
+
+  - platform: template
+    name: "${friendly_name} Fan Status"
+    id: fan_status
